<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="5dp"
    android:orientation="horizontal"
    tools:context=".DetailFrag">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="5dp"
        android:elevation="10dp"
        app:cardBackgroundColor=" #5C6BC0"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="false"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/dName"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="15dp"
            android:hint="@string/name_box"
            android:textColor="#E8EAF6"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dGroup"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="50dp"
            android:hint="@string/bloodgroup_box"
            android:textColor="#E8EAF6"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dLocation"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="85dp"
            android:hint="@string/location_box"
            android:textColor="#E8EAF6"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dNumber"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="120dp"
            android:hint="@string/phone_number_box"
            android:textColor="#E8EAF6"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/locationid"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="80dp"
            android:background=" #5C6BC0"

            android:contentDescription="@string/call_img"
            app:srcCompat="@drawable/location_vector" />

        <ImageButton
            android:id="@+id/callid"
            android:layout_width="60dp"

            android:layout_height="30dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="118dp"
            android:background=" #5C6BC0"
            android:contentDescription="@string/map_img"
            app:srcCompat="@drawable/call_vector" />
    </androidx.cardview.widget.CardView>

</LinearLayout>