<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="5dp"

        android:elevation="10dp"
        app:cardBackgroundColor="#00897B"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="false"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/personv"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:contentDescription="@string/rperson_img"
            app:srcCompat="@drawable/person" />

        <TextView
            android:id="@+id/namev"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/rname_box"
            android:textColor="#29B6F6"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/groupv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="25dp"
            android:text="@string/rgroup_box"
            android:textColor="#29B6F6"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</LinearLayout>